--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chickens</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h1>Chickens</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quam, explicabo error inventore rem placeat aliquam, natus officia minus quidem, enim id eius ea laborum dolores incidunt illum labore voluptates?</p>
-    
+    <svg viewBox="0 0 600 300">
+        <!-- Symbol-->
+        <symbol id="s-text">
+        <text text-anchor="middle" x="50%" y="50%" dy=".35em">Chickens</text>
+        </symbol>
+        <!-- Duplicate symbols-->
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+        <use class="text" xlink:href="#s-text"></use>
+    </svg>
+
 </body>
 </html>
